--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="navbar-brand" href="index.html">الشعار هنا</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <div class="mobileMenu"><i></i><i></i><i></i></div>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
@@ -72,7 +72,7 @@
   <section class="adv" id="adv">
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-lg-4 col-md-12">
           <div class="sectionTitle">
             <h4>مزايا</h4>
             <p>تطبيقك جاهز نتاج خبرة طويلة دامت اكثر من 10 سنوات عمل على تطوير وبرمجة التطبيقات خلفها فريق رائع ،،
@@ -81,7 +81,7 @@
           </div>
 
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-4 col-md-6">
           <div class="advBox">
             <div class="advBoxIcon">
               <img src="assets/images/pencil.png" alt="">
@@ -90,7 +90,7 @@
             <p>تطبيقاتنا جاهزة عملنا عليها على المدى الخمس سنوات الماضية اخترتناها</p>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-4 col-md-6">
           <div class="advBox marginBox">
             <div class="advBoxIcon">
               <img src="assets/images/shield.png" alt="">
