--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <p>للعملاءالأوائل</p>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-8">
           <div class="subscribeBox">
             <p>اشترك لتحصل على تخفيض 30% عند الاطلاق</p>
             <form class="subscribeForm">
@@ -328,7 +328,7 @@
           </div>
 
         </div>
-        <div class="col-md-8">
+        <div class="col-lg-8 col-md-12">
           <form action="" class="contactForm">
             <div class="form-group halfFormGroup marginForm">
               <i class="fas fa-user"></i>
